init: 完成父子工程搭建 && 建表语句编写

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -2,7 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>com.allen.uniapp.server</groupId>
+	<artifactId>service-parent</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<description>chat-service-parent</description>
+
 	<modules>
 		<module>service-chat</module>
 		<module>service-status</module>
@@ -16,36 +22,71 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-	<groupId>com.allen.uniapp.server</groupId>
-	<artifactId>service-parent</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>chat-service-parent</name>
-	<description>chat-service-parent</description>
-
 	<properties>
-		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<!-- netty version -->
+		<netty.version>4.1.34.Final</netty.version>
+		<!-- lombok -->
+		<lombok.version>1.18.16</lombok.version>
+		<!-- fastjson -->
+		<fastjson.version>1.2.62</fastjson.version>
+		<!-- junit版本号 -->
+		<junit.version>4.11</junit.version>
 	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
+	<dependencyManagement>
+		<dependencies>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+			<!-- 子模块引入 -->
+			<dependency>
+				<groupId>com.allen.uniapp.server</groupId>
+				<artifactId>service-chat</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.allen.uniapp.server</groupId>
+				<artifactId>service-status</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.allen.uniapp.server</groupId>
+				<artifactId>service-loadbalancer</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+			<!-- netty 包 -->
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-all</artifactId>
+				<version>${netty.version}</version>
+			</dependency>
+
+			<!-- lombok 包 -->
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<!-- 引入fastjson -->
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson.version}</version>
+			</dependency>
+
+			<!-- 引入junit -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+
+		</dependencies>
+	</dependencyManagement>
 
 </project>
